--- a/sept_core/codegen/Cargo.toml
+++ b/sept_core/codegen/Cargo.toml
@@ -9,9 +9,27 @@ proc-macro = true
 
 [dependencies]
 actix-rt = "^2.8"
+quote = "1.0"
 proc-macro2 = "1"
-quote = "1"
-syn = "1"
+regex = "1"
+lazy_static = "1"
+backtrace = "0.3.55"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tree-sitter = "^0.20"
+tree-sitter-rust = "^0.20"
+base64 = "^0.21"
+syn = { version = "1.0.109", features = ["full", "extra-traits"] }
+
+[dependencies.sept_di]
+version = "0.1.0"
+path = "../../../sept_di"
 
 [dev-dependencies]
 sept = { path = "../lib" }
+
+[build]
+rustflags = [
+    "--cfg procmacro2_semver_exempt",
+    "--cfg super_unstable",
+]
