--- a/sept_core/lib/Cargo.toml
+++ b/sept_core/lib/Cargo.toml
@@ -10,6 +10,7 @@ actix-http = "^3"
 actix-tls = "^3"
 actix-rt = "^2.8"
 chrono = "0.4.12"
+futures = "0.3.28"
 futures-util = "^0.3"
 listenfd = "1"
 rustls = { version = "^0.21", optional = true }
@@ -19,6 +20,10 @@ tracing-subscriber = "0.3"
 [dependencies.sept_codegen]
 version = "0.1.0"
 path = "../codegen"
+
+[dependencies.sept_di]
+version = "0.1.0"
+path = "../../../sept_di"
 
 [features]
 default = ["rustls"]
