--- a/sept_core/lib/Cargo.toml
+++ b/sept_core/lib/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 [dependencies]
 actix-web = { version = "4", features = ["rustls"] }
 actix-http = "^3"
+actix-cors = "^0.6"
 actix-tls = "^3"
 actix-rt = "^2.8"
 chrono = "0.4.12"
